--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,34 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: rgb(17, 17, 17);
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-accent: #ffb400;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-poppins: Poppins, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
+@layer utilities {
+  .text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255, 255, 255 / var(--tw-text-opacity));
+  }
+}
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  color: text-white;
   font-family: Arial, Helvetica, sans-serif;
 }
