--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
 @import 'tailwindcss';
 
 :root {
@@ -5,6 +6,7 @@
 }
 
 @theme inline {
+  --font-rocksalt: 'Rock Salt';
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-accent: #ffb400;
@@ -31,5 +33,4 @@
 body {
   background: var(--background);
   color: text-white;
-  font-family: Arial, Helvetica, sans-serif;
 }
